<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ece1778.keiming.assignment2.UI.Fragments.AddMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">
        <TextView
            android:id="@+id/amTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/am_title_string"
            android:textStyle="bold"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/amName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/am_name_string"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_below="@id/amTitle"
            android:gravity="bottom"/>
        <EditText
            android:id="@+id/amNameEntry"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/amName"
            android:inputType="textPersonName"
            android:layout_alignBottom="@id/amName"
            android:gravity="bottom"/>

        <TextView
            android:id="@+id/amAge"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/am_age_string"
            android:textSize="@dimen/abc_text_size_title_material"
            android:layout_below="@id/amName"
            android:gravity="bottom"/>
        <EditText
            android:id="@+id/amAgeEntry"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/amAge"
            android:layout_alignBottom="@id/amAge"
            android:inputType="number"
            android:gravity="bottom"/>

        <TextView
            android:id="@+id/amFavFood"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/amAgeEntry"
            android:text="@string/am_fav_food_string"
            android:textSize="@dimen/abc_text_size_title_material"
            android:gravity="bottom"/>
        <Spinner
            android:id="@+id/amFavFoodEntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amFavFood"
            android:entries="@array/food_array"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <View
            android:id="@+id/amButtonCenterShim"
            android:layout_width="1dp"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/amCancelButton"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:text="@string/am_cancel_string"
            android:layout_toLeftOf="@id/amButtonCenterShim"/>
        <Button
            android:id="@+id/amAddButton"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:text="@string/am_add_string"
            android:layout_toRightOf="@id/amButtonCenterShim"/>
        <Button
            android:id="@+id/amDoneButton"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:text="@string/am_done_string"
            android:layout_below="@id/amAddButton"/>
    </RelativeLayout>
</FrameLayout>
